[package]
name = "piggie-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# Discord
serenity = "0.12"
poise    = "0.6"

# Misc
toml = "0.8"
lazy_static = "1.4.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

web-base = { git = "https://github.com/RPCompanion/web-base", branch = "master" }